[package]
name = "crossmachne"
version = "0.1.0"
authors = ["h49k"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
# web-view = { version = "0.6", features = ["edge"] }
# web-view = { version = "0.6", features = ["Cocoa"] }
web-view = "0.6.2"